feat : add controls and tests for URL, URN and URI format.